Fix post image not showing

--- a/public/src/css/feed.css
+++ b/public/src/css/feed.css
@@ -32,5 +32,6 @@
 
 .shared-moment-card {
     margin-bottom: 1em;
-    width: auto;
+    text-align: center;
+    color: white;
 }
